<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.r6tabmobileapp.ui.home.HomeFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.r6tabmobileapp.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.r6tabmobileapp.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.r6tabmobileapp.ui.settings.SettingsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.r6tabmobileapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.r6tabmobileapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>