<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="@android:color/background_dark"
        app:srcCompat="@drawable/logoimg"
        android:contentDescription="@string/r6tablogo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Email_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Email_Input"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/example_email_com"
                android:inputType="textEmailAddress"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Password_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Password_Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/UserPassword"
                android:inputType="textPassword"
                android:autofillHints="" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/Login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton" />

    <Button
        android:id="@+id/Forgot_Password_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_passwordButton" />

    <Button
        android:id="@+id/Sign_Up_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

</LinearLayout>